<resources>
    <string name="app_name">Noughts And Crosses</string>
    <string name="unJuguador">1 player</string>
    <string name="dosJugadore">2 players</string>
    <string name="nivelFacil">Easy</string>
    <string name="nivelNormal">Normal</string>
    <string name="nivelDificil">Insane</string>
    <string name="casilla">Tile</string>
    <string name="circuloGana">Circle Win!</string>
    <string name="aspaGana">Crosses Win!</string>
    <string name="empate">Tie!</string>
</resources>
